--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "@types/multer": "^2.0.0",
     "@types/nodemailer": "^6.4.17",
     "@types/pdf-parse": "^1.1.5",
+    "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "bullmq": "^5.58.0",
     "cookie-parser": "^1.4.7",
@@ -40,7 +41,8 @@
     "nodemailer": "^7.0.5",
     "pdf-parse": "^1.1.1",
     "prisma": "^6.11.1",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@supabase/supabase-js": "^2.39.0",
