--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "googleapis": "^155.0.1",
     "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.2.0",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
     "pdf-parse": "^1.1.1",
